Fix truncated format no-popover view to work with resize

--- a/packages/table/src/cell/formats/_formats.scss
+++ b/packages/table/src/cell/formats/_formats.scss
@@ -22,8 +22,8 @@
   position: absolute;
   top: 0;
   right: $pt-grid-size;
-  bottom: 0;
   left: $pt-grid-size;
+  max-height: 100%;
 
   overflow: hidden;
   text-overflow: ellipsis;
